add-rating-stars

--- a/envoie-projet.html
+++ b/envoie-projet.html
@@ -65,6 +65,11 @@
                                         <img class="card-img" src="images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="Auberge la Cannebière"/>
                                         <p class="titre-card">Auberge la Cannebière</p>
                                         <p>Nuit à partir de <span>25€</span></p>
+                                        <span class="fa fa-star checked"></span>
+                                        <span class="fa fa-star checked"></span>
+                                        <span class="fa fa-star checked"></span>
+                                        <span class="fa fa-star"></span>
+                                        <span class="fa fa-star"></span>
                                     </div>
                                 </a>
                                 <a href="#">
@@ -72,6 +77,11 @@
                                         <img class="card-img" src="images/hebergements/4_small/fred-kleber-gTbaxaVLvsg-unsplash.jpg" alt="Hôtel du port"/>
                                         <p class="titre-card">Hôtel du port</p>
                                         <p>Nuit à partir de 52<span>€</span></p>
+                                        <span class="fa fa-star checked"></span>
+                                        <span class="fa fa-star checked"></span>
+                                        <span class="fa fa-star checked"></span>
+                                        <span class="fa fa-star"></span>
+                                        <span class="fa fa-star"></span>
                                     </div>
                                 </a>
                                 <a href="#">
@@ -79,6 +89,11 @@
                                         <img class="card-img" src="images/hebergements/4_small/reisetopia-B8WIgxA_PFU-unsplash.jpg" alt="Hôtel les mouettes"/>
                                         <p class="titre-card">Hôtel les mouettes</p>
                                         <p>Nuit à partir de 76<span>€</span></p>
+                                        <span class="fa fa-star checked"></span>
+                                        <span class="fa fa-star checked"></span>
+                                        <span class="fa fa-star checked"></span>
+                                        <span class="fa fa-star"></span>
+                                        <span class="fa fa-star"></span>
                                     </div>
                                 </a>
                                 <a href="#">
@@ -86,6 +101,11 @@
                                         <img class="card-img" src="images/hebergements/4_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg" alt="Hôtel de la mer"/>
                                         <p class="titre-card">Hôtel de la mer</p>
                                         <p>Nuit à partir de 46<span>€</span></p>
+                                        <span class="fa fa-star checked"></span>
+                                        <span class="fa fa-star checked"></span>
+                                        <span class="fa fa-star checked"></span>
+                                        <span class="fa fa-star"></span>
+                                        <span class="fa fa-star"></span>
                                     </div>
                                 </a>
                                 <a href="#">
@@ -93,6 +113,11 @@
                                         <img class="card-img" src="images/hebergements/4_small/nicate-lee-kT-ZyaiwBe0-unsplash.jpg" alt="Auberge le panier"/>
                                         <p class="titre-card">Auberge le panier</p>
                                         <p>Nuit à partir de <span>23€</span></p>
+                                        <span class="fa fa-star checked"></span>
+                                        <span class="fa fa-star checked"></span>
+                                        <span class="fa fa-star checked"></span>
+                                        <span class="fa fa-star"></span>
+                                        <span class="fa fa-star"></span>
                                     </div>
                                 </a>
                                 <a href="#">
@@ -100,6 +125,11 @@
                                         <img class="card-img" src="images/hebergements/4_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg" alt="Hôtel chez Amina"/>
                                         <p class="titre-card">Hôtel chez Amina</p>
                                         <p>Nuit à partir de 96<span>€</span></p>
+                                        <span class="fa fa-star checked"></span>
+                                        <span class="fa fa-star checked"></span>
+                                        <span class="fa fa-star checked"></span>
+                                        <span class="fa fa-star"></span>
+                                        <span class="fa fa-star"></span>
                                     </div>
                                 </a>
                             </div>
@@ -114,6 +144,11 @@
                                                 <div class="bloc-description_famous">
                                                     <p class="titre-card">Hôtel le soleil du matin</p>
                                                     <p>Nuit à partir de 128<span>€</span></p>
+                                                    <span class="fa fa-star checked"></span>
+                                                    <span class="fa fa-star checked"></span>
+                                                    <span class="fa fa-star checked"></span>
+                                                    <span class="fa fa-star"></span>
+                                                    <span class="fa fa-star"></span>
                                                 </div>
                                         </div>
                                     </a>
@@ -123,6 +158,11 @@
                                             <div class="bloc-description_famous">
                                                 <p class="titre-card">Au coeur de l'eau Chambres d'hôtes</p>
                                                 <p>Nuit à partir de 71<span>€</span></p>
+                                                <span class="fa fa-star checked"></span>
+                                                <span class="fa fa-star checked"></span>
+                                                <span class="fa fa-star checked"></span>
+                                                <span class="fa fa-star"></span>
+                                                <span class="fa fa-star"></span>
                                             </div>
                                     </div>
                                     </a>
@@ -132,6 +172,11 @@
                                                 <div class="bloc-description_famous">
                                                     <p class="titre-card">Hôtel tout bleu et blanc</p>
                                                     <p>Nuit à partir de 68<span>€</span></p>
+                                                    <span class="fa fa-star checked"></span>
+                                                    <span class="fa fa-star checked"></span>
+                                                    <span class="fa fa-star checked"></span>
+                                                    <span class="fa fa-star"></span>
+                                                    <span class="fa fa-star"></span>
                                                 </div>
                                         </div>
                                     </a>
