--- a/envoie-projet.html
+++ b/envoie-projet.html
@@ -68,7 +68,7 @@
                                         <span class="fa fa-star checked"></span>
                                         <span class="fa fa-star checked"></span>
                                         <span class="fa fa-star checked"></span>
-                                        <span class="fa fa-star"></span>
+                                        <span class="fa fa-star checked"></span>
                                         <span class="fa fa-star"></span>
                                     </div>
                                 </a>
@@ -80,8 +80,8 @@
                                         <span class="fa fa-star checked"></span>
                                         <span class="fa fa-star checked"></span>
                                         <span class="fa fa-star checked"></span>
-                                        <span class="fa fa-star"></span>
-                                        <span class="fa fa-star"></span>
+                                        <span class="fa fa-star checked"></span>
+                                        <span class="fa fa-star checked"></span>
                                     </div>
                                 </a>
                                 <a href="#">
@@ -92,7 +92,7 @@
                                         <span class="fa fa-star checked"></span>
                                         <span class="fa fa-star checked"></span>
                                         <span class="fa fa-star checked"></span>
-                                        <span class="fa fa-star"></span>
+                                        <span class="fa fa-star checked"></span>
                                         <span class="fa fa-star"></span>
                                     </div>
                                 </a>
@@ -116,7 +116,7 @@
                                         <span class="fa fa-star checked"></span>
                                         <span class="fa fa-star checked"></span>
                                         <span class="fa fa-star checked"></span>
-                                        <span class="fa fa-star"></span>
+                                        <span class="fa fa-star checked"></span>
                                         <span class="fa fa-star"></span>
                                     </div>
                                 </a>
@@ -128,8 +128,8 @@
                                         <span class="fa fa-star checked"></span>
                                         <span class="fa fa-star checked"></span>
                                         <span class="fa fa-star checked"></span>
-                                        <span class="fa fa-star"></span>
-                                        <span class="fa fa-star"></span>
+                                        <span class="fa fa-star checked"></span>
+                                        <span class="fa fa-star checked"></span>
                                     </div>
                                 </a>
                             </div>
@@ -147,8 +147,8 @@
                                                     <span class="fa fa-star checked"></span>
                                                     <span class="fa fa-star checked"></span>
                                                     <span class="fa fa-star checked"></span>
-                                                    <span class="fa fa-star"></span>
-                                                    <span class="fa fa-star"></span>
+                                                    <span class="fa fa-star checked"></span>
+                                                    <span class="fa fa-star checked"></span>
                                                 </div>
                                         </div>
                                     </a>
@@ -161,7 +161,7 @@
                                                 <span class="fa fa-star checked"></span>
                                                 <span class="fa fa-star checked"></span>
                                                 <span class="fa fa-star checked"></span>
-                                                <span class="fa fa-star"></span>
+                                                <span class="fa fa-star checked"></span>
                                                 <span class="fa fa-star"></span>
                                             </div>
                                     </div>
@@ -175,7 +175,7 @@
                                                     <span class="fa fa-star checked"></span>
                                                     <span class="fa fa-star checked"></span>
                                                     <span class="fa fa-star checked"></span>
-                                                    <span class="fa fa-star"></span>
+                                                    <span class="fa fa-star checked"></span>
                                                     <span class="fa fa-star"></span>
                                                 </div>
                                         </div>
