--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                                         <span class="fa fa-star checked"></span>
                                         <span class="fa fa-star checked"></span>
                                         <span class="fa fa-star checked"></span>
-                                        <span class="fa fa-star"></span>
+                                        <span class="fa fa-star empty"></span>
                                     </div>
                                 </a>
                                 <a href="#">
@@ -93,7 +93,7 @@
                                         <span class="fa fa-star checked"></span>
                                         <span class="fa fa-star checked"></span>
                                         <span class="fa fa-star checked"></span>
-                                        <span class="fa fa-star"></span>
+                                        <span class="fa fa-star empty"></span>
                                     </div>
                                 </a>
                                 <a href="#">
@@ -104,8 +104,8 @@
                                         <span class="fa fa-star checked"></span>
                                         <span class="fa fa-star checked"></span>
                                         <span class="fa fa-star checked"></span>
-                                        <span class="fa fa-star"></span>
-                                        <span class="fa fa-star"></span>
+                                        <span class="fa fa-star empty"></span>
+                                        <span class="fa fa-star empty"></span>
                                     </div>
                                 </a>
                                 <a href="#">
@@ -117,7 +117,7 @@
                                         <span class="fa fa-star checked"></span>
                                         <span class="fa fa-star checked"></span>
                                         <span class="fa fa-star checked"></span>
-                                        <span class="fa fa-star"></span>
+                                        <span class="fa fa-star empty"></span>
                                     </div>
                                 </a>
                                 <a href="#">
@@ -162,7 +162,7 @@
                                                 <span class="fa fa-star checked"></span>
                                                 <span class="fa fa-star checked"></span>
                                                 <span class="fa fa-star checked"></span>
-                                                <span class="fa fa-star"></span>
+                                                <span class="fa fa-star empty"></span>
                                             </div>
                                     </div>
                                     </a>
@@ -176,7 +176,7 @@
                                                     <span class="fa fa-star checked"></span>
                                                     <span class="fa fa-star checked"></span>
                                                     <span class="fa fa-star checked"></span>
-                                                    <span class="fa fa-star "></span>
+                                                    <span class="fa fa-star empty"></span>
                                                 </div>
                                         </div>
                                     </a>
