add-fix-css-w3c

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                             <div class="btn-general eco_icon"> <input type="button" value="Économique"> </div>
                             <div class="btn-general family_icon"> <input type="button" value="Familial"> </div>
                             <div class="btn-general heart_icon"> <input type="button" value="Romantique"> </div>
-                            <div class="btn-general animal_icon"> <input type="button" value="Animaux autorisés"> </div>
+                            <div class="btn-general animal_icon"> <i class="fas fa-heart"></i> <input type="button" value="Animaux autorisés"> </div>
                         </div>
                         <div class="info-search">
                             <i class="fas fa-info"></i>
